Partly solve issues with long event titles on truncated event card

--- a/src/dukop/static/css/_badges_tags.scss
+++ b/src/dukop/static/css/_badges_tags.scss
@@ -12,4 +12,5 @@
     background-color: #c33;
     color: #fff;
     padding: 5px 10px;
+    display: inline-block;
 }
